--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-
-Here is github folder.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Github files</title>
+</head>
+<body>
+    <h1>This is first acess Github documnets</h1>
+</body>
+</html>
