--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github files</title>
+    <style>
+        h1::first-letter {
+            color: purple;
+            font-size: 80px;
+        }
+    </style>
 </head>
 <body>
-    <h1>This is first acess Github documnets</h1>
+    <h1 style="color: aqua;">This is first acess Github documnets</h1>
+
 </body>
 </html>
