modify two files one is noraml.txt other's is index.html files

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
             color: purple;
             font-size: 80px;
         }
+        div {
+            height: 200px;
+            width: 400px;
+            margin: auto;
+            background: rgb(20, 150, 132);
+        }
     </style>
 </head>
 <body>
     <h1 style="color: aqua;">This is first acess Github documnets</h1>
-
+<div></div>
 </body>
 </html>
