change nav color and added text

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         }
         div {
             height: 200px;
-            width: 400px;
             margin: auto;
-            background: rgb(20, 150, 132);
+            background: rgb(91, 201, 186);
         }
     </style>
 </head>
 <body>
     <h1 style="color: aqua;">This is first acess Github documnets</h1>
-<div></div>
+<div>Here are some text and color</div>
 </body>
 </html>
