--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <body>
     <h1 style="color: aqua;">This is first acess Github documnets</h1>
 <div>Here are some text and color</div>
+    This is the main content for this page.
 </body>
 </html>
