Changed color olive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Github files</title>
     <style>
         h1::first-letter {
-            color: purple;
+            color: olive;
             font-size: 80px;
         }
         div {
