div feature2 added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             margin: auto;
             background: rgb(91, 201, 186);
         }
+        .feature2 {
+            background-color: aqua;
+            font-size: 57px;
+            text-align: center;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -26,5 +32,7 @@
 
 
     <h1>This is local command line branch</h1>
+
+    <div class="feature2">This is feature two files</div>
 </body>
 </html>
